fix: margin bottom on small screens (#398)

--- a/public/pages/Home/components/ListIdeas.scss
+++ b/public/pages/Home/components/ListIdeas.scss
@@ -1,8 +1,6 @@
 @import '~@fider/assets/styles/variables.scss';
 
 .c-idea-list {
-  margin-top: 10px;
-
   .c-list-item {
     display: flex;
     border-top-width: 0.1px !important;
